--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,12 @@ h6 {
   line-height: 0;
 }
 
+.swiper-slide {
+  height: 500px;
+  width: 50%;
+
+}
+
 .back-to-top:hover {
   background: #2eafec;
   color: #fff;
