--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,13 @@ h6 {
 
 }
 
+@media (max-width: 768px) {
+  .swiper-slide {
+    height: auto; /* Allow the height to adjust based on content */
+    width: 100%; /* Use full width of the screen */
+  }
+}
+
 .back-to-top:hover {
   background: #2eafec;
   color: #fff;
@@ -249,6 +256,14 @@ h6 {
   height: 100vh;
   background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
+}
+
+@media (max-width: 768px) {
+  #hero {
+    height: 25vh;
+    width: 100%;
+    background-size: contain;
+  }
 }
 
 #hero:before {
